--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+using nammespace std
 <html>
   <head>
     <title>
@@ -8,3 +9,60 @@
     webpage body
   </body>
 </html>
+currency>>
+<html>
+  <head>
+    <title>
+    2024-05-6
+  webpage title
+    </title>
+  </head>
+  <body>
+    webpage body
+  </body>
+</html> 
+exspenses+{}
+<html>
+  <head>
+    <title>
+      webpage title
+    </title>
+  </head>
+  <body>
+    <date> value,accurency=line.split{}
+  </body>
+</html>
+<html>
+  <head>
+<Ut1f14>
+return exspenses>>>
+    <title>
+      webpage title
+    </title>
+  </head>
+  <body>
+    webpage body
+  </body>
+</html>
+imp Codepoint{
+<html>
+  <head>
+    <title>
+      webpage title
+    </title>
+  </head>
+  <body>
+   <app></app>
+  </body>
+</html>
+<html>
+  <head>
+    <title>
+      webpage title
+    </title>
+  </head>
+  <body>
+    webpage body
+  </body>
+</html>
+<picuture>
